School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_If_While/test_OR.deca
//test de l'operateur OR ||
//

{
    int i = 10;
    boolean b = (false || 15>10) || (true || 2==2);
    if(b || i<15){
        println("OR marche");
    }
}